.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Candidate_Search_Settings__c/fields/Auto_Shift_Bidding_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Shift_Bidding_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Shift Bidding Enabled</label>
    <type>Checkbox</type>
</CustomField>