.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Candidate_Search_Settings__c/fields/Auto_Shift_Bidding_Matching_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Auto_Shift_Bidding_Matching_Percentage__c</fullName>
    <label>Auto Shift Bidding Matching Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>